--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,20 @@
 {
-    "name": "Мой Чат",
-    "short_name": "Чат",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#121212",
-    "theme_color": "#121212",
-    "description": "Современный чат без лагов",
-    "icons": [
-      {
-        "src": "/icon-192.png",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "/icon-512.png",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ]
-  }
-  
+  "name": "My Cool App",
+  "short_name": "CoolApp",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "/icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
