--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,14 @@
 {
-  "name": "My Cool App",
-  "short_name": "CoolApp",
-  "start_url": "/",
-  "display": "standalone",
+  "name": "Сообщение",
+  "short_name": "Сообщение",
+  "scope": "/",
+  "theme_color": "rgba(0, 0, 0, 0)",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "display": "standalone",
+  "start_url": "index.html",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icons/icon-512.png",
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
