--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,18 @@
 {
-  "name": "Сообщение",
-  "short_name": "Сообщение",
-  "scope": "/",
-  "theme_color": "rgba(0, 0, 0, 0)",
-  "background_color": "#ffffff",
+  "name": "Мой Чат",
+  "short_name": "Чат",
+  "start_url": ".",
   "display": "standalone",
-  "start_url": "index.html",
+  "background_color": "#ffffff",
+  "theme_color": "#007bff",
   "icons": [
     {
-      "src": "icon-512x512.png",
+      "src": "/on/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/on/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
